# TIP-LLM-GenAI

./: .gitignore  README.md  pyproject.toml
chainlit_activity/: README.md  agentic_chainlit_app.py  sample_chainlit_app.py
notebooks/: 1 - Hello World of LLM.ipynb  2 - Prompt Engineering.ipynb  3 - RAG.ipynb  3.1 - RAG with PDF.ipynb
notebooks/activities/: 1 - Prompt Engineering Challenge.ipynb
