[project]
name = "tip-llm-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.5.5",
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "google-genai>=1.20.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.7.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
