[project]
name = "tip-llm-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.5.5",
    "crewai[tools]>=0.130.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.4",
    "faiss-cpu>=1.11.0",
    "google-genai>=1.20.0",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
